
 - Added query methods to scene manager: Find Scene nodes by type
    getSceneNodesFromType

 - Added min and max functions with 3 values: core::min_ and core::max_

 - Fixed a crash when using Octtrees caused by unnecessary dropping of meshes when 
   deserializing the scene node.

 - Removed an array::erase from Octtrees and Octtree triangle selector.

GUI:

  - Added EGUI_DEFAULT_FONT for skins, default fonts can now be set for windows, menus, buttons and tooltips.
    use IGUISkin::setFont and getFont to use them. Fonts are not serialized with saveGUI yet

  - Added EGDC_TOOLTIP_BACKGROUND for setting background color of tooltips.

  - Tooltips now appear relative to mouse position, also they do not appear for 500ms.

  - Fixed a memory leak when dropping the GUIEnvironment when a tooltip was present.

  - Added IGUIStaticText::setDrawBackground and IGUIStaticText::setBackgroundColor.

  - Fixed a messagebox focus bug when no 'okay' button was present.

  - Added setColor and setScaleImage to GUIImage.

  - GUIListBox highlighted area now clips properly.

  - added getOSOperator to GUIEnvironment (for clipboard access in elements) and updated CGUIEditBox.

  - Can now load/save gui environment from/to an element.

  - Most element set functions now have a corresponding get or is function. 
   (API change) IGUIButton::getUseAlphaChannel is now isAlphaChannelUsed, to fit with other is* functions.

  - Fixed a bug with resizing the gui environment when the device is resized

  - Modal screens now resize to fit their parent.

  - XML bitmap fonts now load textures from the XML file directory rather than the current one.

  - Fixed a small bug with click areas in combo boxes.
  

GUI Editor:

  - Added cut/copy/paste using clipboard and xml (via memory file). Will have problems in Linux due 
    to no clipboard support

  - Added texture attribute element

  - Added CGUIPanel, a container with optional scrollbars. Originally submitted by Asger Feldthaus

